# QtBdbSqlPlugin

./: CMakeLists.txt
src/: CMakeLists.txt  smain.cpp  sqlite.json
src/tst/: CMakeLists.txt  QtBdbSqlPI_t.cc
